Correcting background colour of icons in dark mode

--- a/style/style.css
+++ b/style/style.css
@@ -44,7 +44,7 @@ i.prof-logo
 .dark-mode i.prof-logo
 {
 	color: white;
-	background-color: black;
+	background-color: #121212;
 }
 
 .site_content
